<?xml version="1.0"?>
<package format="3">
  <name>sentinelx</name>
  <version>0.2.0</version>
  <description>Single-package SentinelX ROS2 Humble C++ kit: messages, interceptor, PX4 control bridge, seeker stub, and bringup launch.</description>
  <maintainer email="dev@example.com">SentinelX</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>px4_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
