<?xml version="1.0"?>
<package format="3">
  <name>sentinelx</name>
  <version>0.3.0</version>
  <description>SentinelX ROS2 Humble C++ kit. Uses cuas_msgs for C2/CUAS interfaces and defines only SentinelX-internal messages.</description>
  <maintainer email="bkkim@divinetech.kr">KIM ByoungKyu</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>cuas_msgs</depend>
  <depend>px4_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
