<?xml version="1.0"?>
<package format="3">
  <name>sentinelx_bringup</name>
  <version>0.1.0</version>
  <description>SentinelX simulation-safe bringup.</description>
  <maintainer email="dev@example.com">SentinelX</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>sentinelx_interceptor</exec_depend>
  <exec_depend>sentinelx_px4_control</exec_depend>
  <exec_depend>sentinelx_seeker</exec_depend>
</package>
