<?xml version="1.0"?>
<package format="3">
  <name>sentinelx_msgs</name>
  <version>0.1.0</version>
  <description>SentinelX internal ROS 2 messages.</description>
  <maintainer email="dev@example.com">SentinelX</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>builtin_interfaces</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
