<?xml version="1.0"?>
<package format="3">
  <name>sentinelx_px4_control</name>
  <version>0.1.0</version>
  <description>SentinelX PX4 bridge node. Simulation-safe: reads PX4 state and accepts guidance commands, but does not publish actuator/flight commands.</description>
  <maintainer email="dev@example.com">SentinelX</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>sentinelx_msgs</depend>
</package>
