<?xml version="1.0"?>
<package format="3">
  <name>sentinelx_seeker</name>
  <version>0.1.0</version>
  <description>SentinelX seeker simulation stub node.</description>
  <maintainer email="dev@example.com">SentinelX</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sentinelx_msgs</depend>
</package>
